--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <p>Is your house dirty and you have no power washer?<br>
       Then call Nathan's Powerwashing for all your power washing needs</p>
         <h2>Garanteed for 10 years</h2>
-      <p>We here at Nathan's power washing take pride in our work, which is why we use an addative to keep mold and moss from growing on your house for 10 years.</p>
+      <p>We here at Nathan's power washing take pride in our work, which is why we use an addative to keep mold and moss from growing on your house for the next 10 years.</p>
         <h2>Contact Info</h2>
     <ul> <li>Email: genericemail@email.com</li> 
       <li>Phone: (123)555-0182 </li>
