--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   
   <head>
     <title>Nathan's Power washing</title>
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <h1>Introduction</h1>
